--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/ios": "^6.2.1",
     "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/splash-screen": "^6.0.4",
     "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage": "^4.0.0",
