--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@capacitor/app": "^6.0.0",
     "@capacitor/camera": "^6.1.3",
     "@capacitor/core": "^6.0.0",
+    "@capacitor/filesystem": "^6.0.4",
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/ios": "^6.2.1",
     "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/share": "^6.0.4",
     "@capacitor/splash-screen": "^6.0.4",
     "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^8.0.0",
